[project]
name = "httpx-catcher"
version = "0.1.0"
description = "Catch requests and responses"
readme = "README.md"
authors = [
    { name = "ilotoki0804", email = "ilotoki0804@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.2",
]

[project.scripts]
httpx-catcher = "httpx_catcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
